--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <title>Gopolitix</title>
   <base href="/">
 
@@ -16,7 +19,7 @@
 
 </head>
 <body>
-  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCY5hUWxqvBjMvwHqJ3czJfA4_Kcyp921I"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDXsOINi9dGvwK0wQiC1LPK6SEA5JO3R3M"></script>
   <app-root></app-root>
 </body>
 </html>
