--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,14 @@
 
 <link rel="stylesheet" href="@icon/themify-icons/themify-icons.css">
 -->
+<link rel="stylesheet" href="@icon/themify-icons/themify-icons.css">
+<link rel="stylesheet" href="https://unpkg.com/@icon/themify-icons/themify-icons.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 
 </head>
 <body>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDXsOINi9dGvwK0wQiC1LPK6SEA5JO3R3M"></script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <app-root></app-root>
 </body>
 </html>
