--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,8 @@
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDXsOINi9dGvwK0wQiC1LPK6SEA5JO3R3M"></script>
