--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     text-align: center;
     cursor: pointer;
     border-radius: 4px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
     }
     
     .edit { 
